fix spacing

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -34,8 +34,8 @@
 
 .section-container {
   height: 100%;
-  width: 80%;
-  margin-left: 10%;
+  width: 86%;
+  margin-left: 7%;
   display: flex;
   flex-direction: column;
   align-items: left;
