--- a/src/router.css
+++ b/src/router.css
@@ -26,3 +26,7 @@ html {
 a {
   color: white;
 }
+
+li {
+  margin: 7px 0px;
+}
